feat: add delete user account
